--- a/app/src/main/res/layout/color_picker.xml
+++ b/app/src/main/res/layout/color_picker.xml
@@ -3,13 +3,13 @@
     android:id="@+id/cp_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="60dp"
     android:orientation="vertical"
-    android:layout_margin="30dp"
     android:padding="3dp" >
     <TextView
         android:id="@+id/cp_row_item"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:textSize="20dp"
-        android:textAlignment="center" />
+        android:layout_height="50dp"
+        android:textAlignment="center"
+        android:textSize="30dp" />
 </RelativeLayout>
