--- a/app/src/main/res/layout/color_picker.xml
+++ b/app/src/main/res/layout/color_picker.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cp_row"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="60dp"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:padding="3dp" >
+    android:padding="2dp">
     <TextView
         android:id="@+id/cp_row_item"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="match_parent"
         android:textAlignment="center"
-        android:textSize="30dp" />
+        android:textSize="15dp"
+        android:gravity="center"/>
 </RelativeLayout>
