--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,128 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cf_layout"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_weight="6">
+        android:padding="5dp">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:text="@string/select_players"
-            android:layout_gravity="center|center"
-            android:textSize="20dp"
             android:textAlignment="center"
-            android:layout_weight="0.5"/>
-        <Spinner
-            android:id="@+id/cf_spinner_p1"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center|center"
-            android:layout_weight="1" />
-        <Spinner
-            android:id="@+id/cf_spinner_p2"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center|center"
-            android:layout_weight="1"  />
-        <Spinner
-            android:id="@+id/cf_spinner_p3"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center|center"
-            android:layout_weight="1" />
-        <Spinner
-            android:id="@+id/cf_spinner_p4"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center|center"
-            android:layout_weight="1" />
-        <Spinner
-            android:id="@+id/cf_spinner_p5"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center|center"
-            android:layout_weight="1" />
-        <Spinner
-            android:id="@+id/cf_spinner_p6"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center|center"
-            android:layout_weight="1"  />
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <Spinner
+                android:id="@+id/cf_spinner_p1"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center|center"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/cf_spinner_p2"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center|center"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <Spinner
+                android:id="@+id/cf_spinner_p3"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center|center"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/cf_spinner_p4"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center|center"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <Spinner
+                android:id="@+id/cf_spinner_p5"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center|center"
+                android:layout_weight="1" />
+
+            <Spinner
+                android:id="@+id/cf_spinner_p6"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_gravity="center|center"
+                android:layout_weight="1" />
+        </LinearLayout>
     </LinearLayout>
+
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="10dp"
+        android:layout_gravity="center|center"
         android:layout_marginBottom="10dp"
-        android:background="#c0c0c0"
-        android:layout_gravity="center|center" />
-    <RelativeLayout
-        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:background="#c0c0c0" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="5dp">
+
         <TextView
             android:id="@+id/cf_num_roll_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/num_rolls"
-            android:textSize="20dp"
-            android:textAlignment="center"
             android:layout_marginBottom="2dp"
-            android:gravity="center" />
-        <SeekBar android:id="@+id/cf_num_rolls"
-            android:max="99"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginRight="30dp"
-            android:layout_below="@+id/cf_num_roll_question"
-            android:layout_alignParentLeft="true"/>
-        <TextView android:id="@+id/cf_num_rolls_disp"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="1"
-            android:layout_marginRight="5dp"
-            android:textSize="15dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/num_rolls"
             android:textAlignment="center"
-            android:layout_below="@+id/cf_num_roll_question"
-            android:layout_alignParentRight="true"/>
-    </RelativeLayout>
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <SeekBar
+                android:id="@+id/cf_num_rolls"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:max="9"
+                android:padding="10dp" />
+
+            <TextView
+                android:id="@+id/cf_num_rolls_disp"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_weight="7"
+                android:padding="10dp"
+                android:text=" 1"
+                android:textAlignment="center"
+                android:textSize="15dp" />
+        </LinearLayout>
+    </LinearLayout>
+
     <View
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="10dp"
-        android:background="#c0c0c0"
-        android:layout_gravity="center" />
+        android:layout_marginTop="10dp"
+        android:background="#c0c0c0" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
-        <Button android:id="@+id/cf_classic"
+        android:layout_weight="1"
+        android:padding="5dp">
+
+        <Button
+            android:id="@+id/cf_classic"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:gravity="center"
             android:text="@string/classic"
-            android:textSize="15dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layout_gravity="center"/>
-        <Button android:id="@+id/cf_cities_and_knights"
+            android:textSize="15dp" />
+
+        <Button
+            android:id="@+id/cf_cities_and_knights"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="@string/cities_and_knights"
-            android:textSize="15dp"
-            android:layout_marginRight="5dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:layout_gravity="center"/>
+            android:text="@string/cities_and_knights"
+            android:textSize="15dp" />
     </LinearLayout>
 </LinearLayout>
