--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="dice_red">#ed0000</color>
     <color name="barbarian">#848484</color>
     <color name="unselected">#000000</color>
+    <color name="dice_yellow">#f1fd04</color>
 </resources>
